--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,15 +4,19 @@
   <thead>
     <th>Title</th>
     <th>Description</th>
-    <th>Actions</th>
+    <th colspan="3">Actions</th>
   </thead>
   <tbody>
     <% @articles.each do |article| %>
     <tr>
       <td><%= article.title %></td>
       <td><%= article.description %></td>
-      <td>placeholder</td>  
+      <td><%= link_to 'Details', article_path(article) %></td>  
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
     </tr>
     <% end %>
   </tbody>
 </table>
+
+<p><%= link_to 'Create new article', new_article_path %></p>
