--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,26 +1,5 @@
 <h1>Create a new article</h1>
 
-<% if @article.errors.any? %>
-  <p><strong>The following errors prevented the article from being saved:</strong></p>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Back to articles', articles_path %>
