--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,15 @@
-<h1>Home page</h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Home Page</h1>
+    <p class="lead">This is the homepage of our bloag you can check the articles by clicking in the "articles listing" button.</p>
+    <a class="btn btn-primary btn-lg" href="/articles" role="button">
+       Articles listing
+    </a>
+    <a class="btn btn-secondary btn-lg" href="/about" role="button">
+      About page
+    </a>
+  </div>
+</div>
 
-<%= link_to 'Articles listing', articles_path %> | 
-<%= link_to 'About page', about_path %>
+<!-- <%= link_to 'Articles listing', articles_path %>
+<%= link_to 'About page', about_path %> -->
