--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,12 @@
-<h1>About page</h1>
+<div id="page-content">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">About Page</h1>
+      <p class="lead">This is the about page of our blog, here is where we write a description for the topics of our blog.</p>
+      <p class="lead">You can check the articles by clicking in the "articles listing" button.</p>
+      <%= link_to 'Articles listing', articles_path,  class: "btn btn-primary btn-lg" %> |
+      <%= link_to 'Home page', root_path, class: "btn btn-secondary btn-lg" %>
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Articles listing', articles_path %> | 
-<%= link_to 'Home page', root_path %>
