--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,12 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Home Page</h1>
-    <p class="lead">This is the homepage of our bloag you can check the articles by clicking in the "articles listing" button.</p>
-    <a class="btn btn-primary btn-lg" href="/articles" role="button">
-       Articles listing
-    </a>
-    <a class="btn btn-secondary btn-lg" href="/about" role="button">
-      About page
-    </a>
+<div id="page-content">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Home Page</h1>
+      <p class="lead">This is the homepage of our blog you can check the articles by clicking in the "articles listing" button.</p>
+      <%= link_to 'Articles listing', articles_path, class: "btn btn-primary btn-lg" %> |
+      <%= link_to 'About page', about_path, class: "btn btn-secondary btn-lg" %>
+    </div>
   </div>
 </div>
 
-<!-- <%= link_to 'Articles listing', articles_path %>
-<%= link_to 'About page', about_path %> -->
+
