--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,26 @@
-<h1>Articles listing page</h1>
+<div id="page-content" class="container" >
+  <h1 class="text-center mt-5 mb-4">Listing all articles</h1>
 
-<table>
-  <thead>
-    <th>Title</th>
-    <th>Description</th>
-    <th colspan="3">Actions</th>
-  </thead>
-  <tbody>
-    <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.description %></td>
-      <td><%= link_to 'Details', article_path(article) %></td>  
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+  <% @articles.each do |article| %>
+    <div class="card text-center shadow mb-5 bg-white rounded">
+      <div class="card-header font-italic">
+        by Cecilia Benitez
+      </div>
+      <div class="card-body">
+        <h5 class="card-title title"><%= article.title %></h5>
+        <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+        <%= link_to 'Details', article_path(article), class: "btn btn-border-primary" %> |
+        <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %> |
+        <%= link_to 'Delete', article_path(article), class: "btn btn-outline-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+      </div>
+      <div class="card-footer text-muted">
+        <small>Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+      </div>
+    </div>
+  <% end %>
 
-<p><%= link_to 'Create new article', new_article_path %></p>
+  <div class="my-4">
+    <%= link_to 'Create new article', new_article_path, class: "link" %>
+  </div>
+</div>
+
