--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,10 @@
-<h1>Create a new article</h1>
+<div id="page-content" class="container" >
+  <h1 class="text-center mt-5 mb-4">Create new article</h1>
+  <%= render 'form' %>
+  <div class="my-4">
+    <%= link_to 'Back to articles', articles_path, class: "link" %>
+  </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back to articles', articles_path %>
+
