--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <%= link_to 'ARTICLES', articles_path, class: "nav-link" %>
+            <%= link_to 'Articles', articles_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to 'ABOUT', about_path, class: "nav-link" %>
+            <%= link_to 'About', about_path, class: "nav-link" %>
           </li>
         </ul>
       </div>
