finishing styling touches and layout.

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<div id="page-content" class="container" >
+<div class="container" >
   <h1 class="text-center mt-5 mb-4">Create new article</h1>
   <%= render 'form' %>
   <div class="my-4">
