--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -84,3 +84,24 @@ body {
 .form-control {
   font-size: 1.8rem;
 }
+
+.dropdown-menu {
+  font-size: 1.6rem;
+}
+
+.close {
+  font-size: 2.2rem !important;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+input[type="text"], textarea {
+  outline: none;
+  box-shadow:none !important;
+  border:1px solid #ccc !important;
+}
