--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,4 @@
-<!--<h1>Showing articles detail info</h1>
-
-<p><strong>Title:</strong> <%= @article.title %></p>
-<p><strong>Description:</strong> <%= @article.description %></p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> | 
-<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %> | 
-<%= link_to 'Back to articles', articles_path %>
--->
-<div id="page-content" class="container" >
+<div class="container" >
   <h1 class="text-center mt-5 mb-4">Articles detail info</h1>
 
   <div class="card text-center shadow mb-5 bg-white rounded">
