--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,10 +7,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <%= link_to 'Articles', articles_path, class: "nav-link" %>
+            <%= link_to 'Home', root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to 'About', about_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Articles
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to 'Create new article', new_article_path, class: "dropdown-item" %>
+              <div class="dropdown-divider"></div>
+              <%= link_to 'View articles', articles_path, class: "dropdown-item" %>
+            </div>
           </li>
         </ul>
       </div>
