--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
   <% @articles.each do |article| %>
     <div class="card text-center shadow mb-5 bg-white rounded">
       <div class="card-header font-italic">
-        by Cecilia Benitez
+        by <%= article.user.username if article.user %>
       </div>
       <div class="card-body">
         <h5 class="card-title title"><%= article.title %></h5>
