--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 
   <div class="card text-center shadow mb-5 bg-white rounded">
       <div class="card-header font-italic">
-        by Cecilia Benitez
+        by <%= @article.user.username if @article.user %>
       </div>
       <div class="card-body">
         <h5 class="card-title title text-left"><%= @article.title %></h5>
