Add users create action.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,8 +4,8 @@
       <h1 class="display-4">About Page</h1>
       <p class="lead">This is the about page of our blog, here is where we write a description for the topics of our blog.</p>
       <p class="lead">You can check the articles by clicking in the "articles listing" button.</p>
-      <%= link_to 'Articles listing', articles_path,  class: "btn btn-primary btn-lg" %> |
-      <%= link_to 'Home page', root_path, class: "btn btn-secondary btn-lg" %>
+      <%= link_to 'Home page', root_path, class: "btn btn-secondary btn-lg" %> |
+      <%= link_to 'Sign up', signup_path, class: "btn btn-primary btn-lg" %>
     </div>
   </div>
 </div>
