--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container" >
-  <h1 class="text-center mt-5 mb-4">Sign up for Blogger Ceci</h1>
+  <h1 class="text-center mt-5 mb-4">Sign up for Blogger-Ceci-App</h1>
   <%= render 'form' %>
   <div class="my-4">
     <%= link_to 'Back to home', root_path, class: "link" %>
