--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
     <div class="container">
       <h1 class="display-4">Home Page</h1>
       <p class="lead">This is the homepage of our blog you can check the articles by clicking in the "articles listing" button.</p>
-      <%= link_to 'Articles listing', articles_path, class: "btn btn-primary btn-lg" %> |
-      <%= link_to 'About page', about_path, class: "btn btn-secondary btn-lg" %>
+      <%= link_to 'About page', about_path, class: "btn btn-secondary btn-lg" %> |
+      <%= link_to 'Sign up', signup_path, class: "btn btn-primary btn-lg" %>
     </div>
   </div>
 </div>
