--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,26 +1,6 @@
 <div class="container" >
   <h1 class="text-center mt-5 mb-4">Listing all articles</h1>
 
-  <% @articles.each do |article| %>
-    <div class="card text-center shadow mb-5 bg-white rounded">
-      <div class="card-header font-italic">
-        by <%= article.user.username if article.user %>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title title"><%= article.title %></h5>
-        <p class="card-text"><%= truncate(article.description, length: 100) %></p>
-        <%= link_to 'Details', article_path(article), class: "btn btn-border-primary" %> |
-        <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %> |
-        <%= link_to 'Delete', article_path(article), class: "btn btn-outline-danger", method: :delete, data: { confirm: "Are you sure?" } %>
-      </div>
-      <div class="card-footer text-muted">
-        <small>Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
-      </div>
-    </div>
-  <% end %>
-
-  <div class="my-4">
-    <%= link_to 'Create new article', new_article_path, class: "link" %>
-  </div>
+  <%= render 'article' %>
 </div>
 
