--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <%= link_to 'Home', root_path, class: "nav-link" %>
+            <%= link_to 'Bloggers', users_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to 'About', about_path, class: "nav-link" %>
