--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,8 +2,9 @@
   <h1 class="text-center mt-5 mb-4">Articles detail info</h1>
 
   <div class="card text-center shadow mb-5 bg-white rounded">
-      <div class="card-header font-italic">
-        by <%= @article.user.username if @article.user %>
+      <div class="card-header font-italic d-flex">
+        <%= link_to gravatar_for(@article.user, size: 50), user_path(@article.user), class: "mr-3" %>
+        <span class="align-self-center">by <%= @article.user.username if @article.user %></span>
       </div>
       <div class="card-body">
         <h5 class="card-title title text-left"><%= @article.title %></h5>
