--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -7,6 +7,7 @@
   --bg-btn-primary: linear-gradient(to right bottom, #dd75fc, #f93b6c);
   --bg-btn-primary-hover: linear-gradient(to right bottom, #d75ffc, #fa245a);
   --title-color: #dd75fc;
+  --border-flickr:  #d75ffc;
 }
 
 html {
@@ -112,3 +113,33 @@ textarea {
   background-image: var(--bg-btn-primary-hover);
   color: white;
 }
+
+.flickr_pagination {
+  text-align: center;
+  padding: 0.3em;
+  cursor: default; }
+  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+    padding: 0.2em 0.5em; }
+  .flickr_pagination .disabled {
+    color: #aaaaaa; }
+  .flickr_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    color: var(--title-color); }
+  .flickr_pagination a {
+    border: 1px solid #dddddd;
+    color: var(--title-color);
+    text-decoration: none; }
+    .flickr_pagination a:hover, .flickr_pagination a:focus {
+      border-color: var(--border-flickr);
+      background: var(--title-color);
+      color: white; }
+  .flickr_pagination .page_info {
+    color: #aaaaaa;
+    padding-top: 0.8em; }
+  .flickr_pagination .previous_page, .flickr_pagination .next_page {
+    border-width: 2px; }
+  .flickr_pagination .previous_page {
+    margin-right: 1em; }
+  .flickr_pagination .next_page {
+    margin-left: 1em; }
