--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,10 @@
     <%= link_to 'Edit your profile', edit_user_path(@user), class: "btn btn-outline-info" %>
   </div>
 
-   <h3 class="text-center mt-5 mb-4">Articles</h3>
+    <h3 class="text-center mt-5 mb-4">Articles</h3>
+
+    <div class="flickr_pagination my-3">
+      <%= will_paginate @articles, :container => false %>
+    </div>
    <%= render 'articles/article' %>
 </div>
