--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <%= link_to 'ALPHA BLOG', root_path, class: "navbar-brand" %>
+        <%= link_to 'BLOGGER CECI', root_path, class: "navbar-brand" %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
