Create and destroy user sessions

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,6 +22,21 @@
               <%= link_to 'View articles', articles_path, class: "dropdown-item" %>
             </div>
           </li>
+          <% if logged_in? %>
+            <li class="nav-item">
+              <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'Log in', login_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign up', signup_path, class: "nav-link" %>
+            </li>
+          <% end %>
         </ul>
       </div>
     </nav>
