--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,10 +9,12 @@
       <div class="card-body">
         <h5 class="card-title title text-left"><%= @article.title %></h5>
         <div class="card-text text-left"><%= simple_format(@article.description) %></div>
-        <div class="text-left">
-          <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %> |
-          <%= link_to 'Delete', article_path(@article), class: "btn btn-outline-danger", method: :delete, data: { confirm: "Are you sure?" } %>
-        </div>
+        <% if logged_in? && @article.user == current_user %>
+          <div class="text-left">
+            <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %> 
+            <%= link_to 'Delete', article_path(@article), class: "btn btn-outline-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+          </div>
+        <% end %>
       </div>
       <div class="card-footer text-muted">
         <small>Created <%= time_ago_in_words(@article.created_at) %> ago, edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
