--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,8 +12,10 @@
       <div class="card-body">
         <div><%= link_to gravatar_for(user, size: 120), user %></div>
         <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
-        <%= link_to 'View profile', user, class: "btn btn-border-primary" %> |
-        <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %> 
+        <%= link_to 'View profile', user, class: "btn btn-border-primary" %> 
+        <% if logged_in? && user == current_user %>
+          <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %> 
+        <% end %>
       </div>
       <div class="card-footer text-muted">
         <small>Joined <%= time_ago_in_words(user.created_at) %> ago</small>
