--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
 <div class="container" >
   <h1 class="text-center mt-5 mb-4"><%= @user.username %>'s profile</h1>
   <%= gravatar_for @user, size: 200 %>
-  <div class="text-center mt-4">
-    <%= link_to 'Edit your profile', edit_user_path(@user), class: "btn btn-outline-info" %>
-  </div>
+
+  <% if logged_in? && @user == current_user %>
+    <div class="text-center mt-4">
+      <%= link_to 'Edit your profile', edit_user_path(@user), class: "btn btn-outline-info" %>
+    </div>
+  <% end %>
 
     <h3 class="text-center mt-5 mb-4">Articles</h3>
 
