Add restriction to controllers and destroy method to users_controller.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,8 +31,9 @@
             </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <%= link_to 'Profile', user_path(current_user), class: "dropdown-item" %>
-                <div class="dropdown-divider"></div>
                 <%= link_to 'Edit your profile', edit_user_path(current_user), class: "dropdown-item" %>
+                <div class="dropdown-divider"></div>
+                <%= link_to 'Delete profile', user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
               </div>
             </li>
             <li class="nav-item">
