--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,8 +13,13 @@
         <div><%= link_to gravatar_for(user, size: 120), user %></div>
         <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
         <%= link_to 'View profile', user, class: "btn btn-border-primary" %> 
-        <% if logged_in? && user == current_user %>
-          <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %> 
+        <% if logged_in? %>
+          <% if user == current_user %>
+            <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %> 
+          <%end%>
+          <% if current_user.admin? %>
+            <%= link_to 'Delete', user_path(user), class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
         <% end %>
       </div>
       <div class="card-footer text-muted">
