--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,7 +27,7 @@
           <% if logged_in? %>
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= current_user.username %>
+              <%= '(Admin) ' if current_user.admin? %><%= current_user.username %>
             </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <%= link_to 'Profile', user_path(current_user), class: "dropdown-item" %>
