--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,21 +3,19 @@
   <div class="row justify-content-center">
     <div class="col-10">
       <%= render 'shared/errors', obj: @category %>
-      <%= form_with(model: @category, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
-        <div class="form-group row">
-          <%= f.label :name, "Category name", class: "col-2 col-form-label text-light" %>
-          <div class="col-10">
-            <%= f.text_field :name, class: "form-control shadow rounded", placeholder: "Enter a name" %>
-          </div>
+      <%= form_with(model: @category, local: true) do |f| %>
+        <div class="form-group">
+          <%= f.label :name, "Category name" %>
+          <%= f.text_field :name, class: "form-control shadow rounded", placeholder: "Enter a name" %>
         </div>
 
-        <div class="form-group row justify-content-center">
-          <%= f.submit class: "btn btn-outline-light btn-lg" %>
+        <div class="my-3">
+          <%= f.submit class: "btn btn-primary" %>
         </div>
       <% end %>
     </div>
     <div class="mb-3">
-      <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
+      <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "link" %>
     </div>
   </div>
 </div>
