--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -9,6 +9,13 @@
     <label for="description"><%= f.label :description %></label>
     <%= f.text_area :description, class: "form-control shadow rounded", id: "description", rows: "10" %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :category %>
+    <%= f.collection_select(:category_ids, Category.all, :id, :name,
+    { prompt: "Make your selection from the list below (can be empty)"}, { multiple: true, size: 3, class: "custom-select shadow rounded" }) %>
+  </div>
+
   <div class="my-3">
     <%= f.submit class: "btn btn-primary" %>
   </div>
