--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -10,7 +10,8 @@
       <div class="col-4 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-body">
-            <h5 class="card-title"><%= link_to category.name, category_path(category), class: "text-success" %></h5>
+            <h5><%= link_to category.name, category_path(category), class: "link" %></h5>
+            <p class="card-text"><%= pluralize(category.articles.count, "article") %></p>
           </div>
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(category.created_at) %> ago, 
